5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1649_2447.log
== TEST (2019-04-11 18:49:13) 
-- CODE:
preco=float(input())
pagamento=float(input())
if=(preco>pagamento)
mensagem= "falta "

-- ERROR:
File "XXXX", line 3
    if=(preco>pagamento)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:34) 
-- CODE:
preco=float(input())
pagamento=float(input())
if=(preco>pagamento):
mensagem= "falta "

-- ERROR:
File "XXXX", line 3
    if=(preco>pagamento):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:51:00) 
-- CODE:
preco=float(input())
pagamento=float(input())
if(preco>pagamento):
mensagem= "falta "

-- ERROR:
File "XXXX", line 4
    mensagem= "falta "
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:57:15) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=(preco-pagamento)
if(preco>pagamento):
	mensagem= "falta x"
else:
	mensagem= "troco de y"
	print=(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem= "falta "
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:57:19) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=(preco-pagamento)
if(preco>pagamento):
	mensagem= "falta x"
else:
	mensagem= "troco de y"
	print=(mensagem)

-- EXECUTION TIME:
0.167931
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:57:24) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=(preco-pagamento)
if(preco>pagamento):
	mensagem= "falta x"
else:
	mensagem= "troco de y"
	print=(mensagem)

-- ERROR:
File "XXXX", line 4
    mensagem= "falta "
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:58:33) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
else:
	mensagem= "troco de y"
	print=(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:58:45) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
else:
	mensagem= "troco de y"
	print=(mensagem)

-- EXECUTION TIME:
0.160968
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:59:06) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
	print(mensagem)
else:
	mensagem= "troco de y"
	print=(mensagem)

-- EXECUTION TIME:
0.126783
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:59:56) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
	print(mensagem)
else:
	mensagem= "troco de y"
	print=(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:00:06) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
	print(mensagem)
else:
	mensagem= "troco de y"
	print=(mensagem)

-- EXECUTION TIME:
0.1499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:54:04) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
	print(round.mensagem,2 )
else:
	mensagem= "falta y"
	print=(round.mensagem,2 )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 20:54:33) 
-- CODE:
preco=float(input())
pagamento=float(input())
troco=float(input(preco-pagamento))
if(preco>pagamento):
	mensagem= "falta x"
	print(round.mensagem,2 )
else:
	mensagem= "falta y"
	print=(round.mensagem,2 )

-- EXECUTION TIME:
0.143501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:00:13) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=float(input(preco-pagamento))
if preco == pagamento:
	mensagem= "falta x"
	print(round.mensagem,2 )
else:
	mensagem= "falta y"
	print=(round.mensagem,2 )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco=float(input(preco-pagamento))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:00:53) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=input(preco-pagamento)
if preco == pagamento:
	mensagem= "falta x"
	print(round.mensagem,2 )
else:
	mensagem= "falta y"
	print=(round.mensagem,2 )

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco=input(preco-pagamento)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:03:54) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=input(preco-pagamento)
if preco == pagamento:
	
	print(falta x)
else:
	
	print=(troco de y)

-- ERROR:
File "XXXX", line 6
    print(falta x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:04:24) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=input(preco-pagamento)
if preco == pagamento:
	
	print=(falta x)
else:
	
	print=(troco de y)

-- ERROR:
File "XXXX", line 6
    print=(falta x)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:04:45) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=input(preco-pagamento)
if preco == pagamento:
	
	print(falta x)
else:
	
	print(troco de y)

-- ERROR:
File "XXXX", line 6
    print(falta x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:07:00) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco=input(preco-pagamento)
if preco == pagamento:
	
	print(round(falta x, 2))
else:
	
	print(round(troco de y,2 ))

-- ERROR:
File "XXXX", line 6
    print(round(falta x, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:16:10) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco= preco - pagamento
if preco == pagamento:
	
	print(round(falta x, 2))
else:
	
	print(round(troco de y,2 ))

-- ERROR:
File "XXXX", line 6
    print(round(falta x, 2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:17:06) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco= preco - pagamento
if preco == pagamento:
	
	print(falta x)
else:
	
	print(troco de y)

-- ERROR:
File "XXXX", line 6
    print(falta x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:18:30) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco= preco - pagamento
if preco == pagamento:
	mensagem= "falta x"
	print(mensagem)
else:
	mensagem= "troco y"
	print(mensagem)

-- OUTPUT:
troco y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:18:43) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))
troco= preco - pagamento
if preco == pagamento:
	mensagem= "falta x"
	print(mensagem)
else:
	mensagem= "troco y"
	print(mensagem)

-- EXECUTION TIME:
0.225099
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
troco y
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
falta x
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:25:43) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))

if (preco>pagamento):
	falta=preco-pagamento
	print(round(falta))
else:
	troco=preco-pagamento
	print(round(troco,2))

-- EXECUTION TIME:
0.14727
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:26:47) 
-- CODE:
preco=float(input("digite o preco:"))
pagamento=float(input("digite o pagamento:"))

if(preco>pagamento):
	falta=preco-pagamento
	print(round(falta))
else:
	troco=preco-pagamento
	print(round(troco,2))

-- EXECUTION TIME:
0.140575
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 21:27:46) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))

if(preco>pagamento):
	falta=preco-pagamento
	print(round(falta))
else:
	troco=preco-pagamento
	print(round(troco,2))

-- OUTPUT:
26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:28:17) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))

if(preco>pagamento):
	falta=preco-pagamento
	print(round(falta))
else:
	troco=preco-pagamento
	print(round(troco,2))

-- EXECUTION TIME:
0.204487
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
26
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:30:41) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))

if(preco>pagamento):
	x=preco-pagamento
	print("falta",x)
else:
	y=preco-pagamento
	print(troco de,y)

-- EXECUTION TIME:
0.166931
-- ERROR:
  File "/home/codebench/codes/1649/2447/main.py", line 9
    print(troco de,y)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:31:19) 
-- CODE:
preco=float(input("digite o preco:" ))
pagamento=float(input("digite o pagamento:" ))

if(preco>pagamento):
	x=preco-pagamento
	print("falta",x)
else:
	y=pagamento-preco
	print(troco de,y)

-- EXECUTION TIME:
0.159479
-- ERROR:
  File "/home/codebench/codes/1649/2447/main.py", line 9
    print(troco de,y)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:31:37) 
-- CODE:
preco=float(input("digite o preco:"))
pagamento=float(input("digite o pagamento:"))

if(preco>pagamento):
	x=preco-pagamento
	print("falta",x)
else:
	y=pagamento-preco
	print(troco de,y)

-- EXECUTION TIME:
0.152861
-- ERROR:
  File "/home/codebench/codes/1649/2447/main.py", line 9
    print(troco de,y)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:32:08) 
-- CODE:
preco=float(input("digite o preco:"))
pag=float(input("digite o pagamento:"))

if(preco>pagamento):
	x=preco-pag
	print("falta",x)
else:
	y=pag-preco
	print(troco de,y)

-- EXECUTION TIME:
0.191244
-- ERROR:
  File "/home/codebench/codes/1649/2447/main.py", line 9
    print(troco de,y)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:32:32) 
-- CODE:
preco=float(input("digite o preco:"))
pag=float(input("digite o pagamento:"))

if(preco>pagamento):
	x=preco-pag
	print("falta",x)
else:
	y=pag-preco
	print("troco de",y)

-- EXECUTION TIME:
0.138508
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    if(preco>pagamento):
NameError: name 'pagamento' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:36:35) 
-- CODE:
preco=float(input("Digite o preco:"))
pag=float(input("Digite o pagamento:"))

if(preco>pagamento):
	x=preco-pag
	print("falta",x)
else:
	y=pag-preco
	print("troco de",y)

-- EXECUTION TIME:
0.251618
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 4, in <module>
    if(preco>pagamento):
NameError: name 'pagamento' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:36:51) 
-- CODE:
preco=float(input("Digite o preco:"))
pag=float(input("Digite o pagamento:"))
if(preco>pagamento):
	x=preco-pag
	print("falta",x)
else:
	y=pag-preco
	print("troco de",y)

-- EXECUTION TIME:
0.188121
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2447/main.py", line 3, in <module>
    if(preco>pagamento):
NameError: name 'pagamento' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 21:37:12) 
-- CODE:
preco=float(input("Digite o preco:"))
pag=float(input("Digite o pagamento:"))
if(preco>pag):
	x=preco-pag
	print("falta",x)
else:
	y=pag-preco
	print("troco de",y)

-- EXECUTION TIME:
0.200426
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:08:00) 
-- CODE:
preco=float(input("Digite o preco:"))
pag=float(input("Digite o pagamento:"))
if preco>pag:
	
	print("falta" , preco - pag)
else:
	
	print("troco de" , pag - preco)

-- EXECUTION TIME:
0.230173
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:09:11) 
-- CODE:
preco = float(input("Digite o preco:"))
pag = float(input("Digite o pagamento:"))
if preco>pag:
	
	print("falta" , preco - pag)
else:
	
	print("troco de" , pag - preco)

-- EXECUTION TIME:
0.187084
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:09:50) 
-- CODE:
preco = float(input("Digite o preco:"))
pag = float(input("Digite o pagamento:"))
if preco>pag:
	print("Falta" , preco - pag)
else:	
	print("Troco de" , pag - preco)

-- EXECUTION TIME:
0.175747
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
